overflow error solved

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,6 +7,9 @@
   background-color: #ff7500;
   color: #0762a9;
 }
+body{
+  width: 100vw;
+}
 .primary-btn {
   background-color: #24335a;
   padding: 11px 1rem;
